<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bme688_driver</name>
  <version>0.0.0</version>
  <description>Driver to extract BME 688 sensor data to ROS 2</description>
  <maintainer email="akchavali9@gmail.com"</maintainer>
  <license>TODO: License declaration</license>
  <depend>gas_sensor_msgs</depend>


 <test_depend>ament_copyright</test_depend>
 <test_depend>ament_flake8</test_depend>
 <test_depend>ament_pep257</test_depend>
 <test_depend>python3-pytest</test_depend
 
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
